# linuxitOS-HackODS-UNAM

./: .gitignore  CLAUDE.md  LICENSE  README.md  ai-log.md  auditoria_html_js.md  main.py  pyproject.toml  requirements.txt
dashboard/: _quarto.yml  animations.html  index.qmd  index.quarto_ipynb_1  narrativa_final.md  styles.css
dashboard/data/: municipios_scatter.json
datos/: Disponibilidad Cuencas_2020.csv  Disponibilidad_Cuencas_2020_lite.json  Estado.csv  Estado_lite.json  README.md  final_merged_data.csv  proyectos_agua.csv
docs/: search.json
docs/data/: municipios_scatter.json
docs/site_libs/bootstrap/: bootstrap-077eb7d4edc9726796df9dc93ec4acdf.min.css  bootstrap-07dcd25fff1d59f349519aac22cf869b.min.css  bootstrap-0ae87541bc5bd81538cf26c976028b9b.min.css  bootstrap-0cad585f4b3b346b331454fe4e67f666.min.css  bootstrap-160b6504d68fd20c1b06f6845340a75b.min.css  bootstrap-1bd02b4c8059efd27d01dcd40e9ded43.min.css  bootstrap-21bbe849108dbf28641fbb85d715f49f.min.css  bootstrap-220dd6be8cce86751cf85fff7e578a09.min.css  bootstrap-24a4b309e4c233d0314ed6bd157f82f6.min.css  bootstrap-258c57c1f3d633e6c2e4ce75449927f2.min.css  bootstrap-260f988a591661bda9f3bcd2da48e3e6.min.css  bootstrap-287b05d128798daed62c32a37cf9ba91.min.css  bootstrap-2aac0dbdb796bdf4f4ca7ee389e7182d.min.css  (+145 more)
notebooks/: 001_Pipeline_ETL_ODS.ipynb  002_Pipeline_Datos_Detallado.ipynb
scripts/: analyze_iter.py  build_expanded_notebook.py  build_notebook.py  clean_coneval.py  merge_conagua.py  merge_inegi_coneval.py  merge_shcp.py  simplify_geojson.py  siods_extractor.py
