[project]
name = "linuxitOS-HackODS-UNAM"
version = "1.0.0"
description = "Dashboard interactivo para HackODS 2026 sobre infraestructura hídrica y pobreza extrema en México."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "plotly>=5.18.0",
    "nbformat>=5.9.2",
    "itables>=1.6.3",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0.1",
    "ipykernel>=6.29.0",
]

[tool.uv]
package = false
